- Added a title message when allying another team (#629) - Credit svaningelgem
- Only tab complete teams that are allies for /team neutral (#632) - Credit svaningelgem
- Added /teama importmessages to import translations from "missingmessages.txt"

Improvements:
- Added missing Spanish messages (both translations) - Credit LeadVic
- Added missing Italian messages - Credit YnsanitY
- Added missing Polish translations - Credit Rain
- Added missing Vietnamese translations - Credit Iamsad_VN

Bug Fixes:
- Fixed typo in config.yml (#620) - Credit dacoder101
- Fixed issue where the clickable invite message's command was not translatable (#602)
- Fixed null pointer being thrown in unexpected way (#634)
- Improved logging for /team baltop error (#623)
- Hopefully fixed a problem causing players to be kicked from teams (#618)
- Fixed problem causing '?' in an item name to break SQL commands (#644)
- Fixed missingmessages.txt getting overwritten when the server restarts losing translated messages

Code improvements:
- Replaced equals/length with isEmpty (#630) - Credit svaningelgem
- Replaced some uses of List with set (Warning developers, this may be a breaking change as class names are updated) (#631) - Credit svaningelgem

4.11.0

Features:
- Added /team chest check to check if a chest is claimed (#673)

Improvements:
- Added tracking of the player name in CreateTeamEvent and TeamDisbandEvent - Credit PikaMug
- Updated Vietnamese translations - Credit maiminhdung
- Improved warp password handling

Bug Fixes:
- Fixed cheat claim giving an asynchronous error (#656)
- Fixed player going offline during an invite period throwing errors (#654)
- Added better null handling for /team top (#660)
- Fixed issue with /team setwarp not removing price from team (#669)
- Fixed an issue where betterteams messages were not getting the plugin prefix (#685)

Headings: 
Features: 

Improvements:

Bug Fixes: 
