@@ -36,6 +36,7 @@ create.exists: '&6That team already exists'
 create.success: '&6Your team has been created'
 create.banned: '&4That team name is banned'
 create.maxLength: '&4That team name is too long'
+create.minLength: '&4That team name is too short'
 leave.success: '&6You have left the team'
 leave.lastOwner: '&6You are the only owner rank within the team, Either promote someone else or use &b/team disband &6to disband command. the team'
 announce.join: '&3{0} &7has joined team {1}'
